--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/weather_station_info_row_layout.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/weather_station_info_row_layout.xml
@@ -3,4 +3,291 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="station_name"
+        android:id="@+id/station_name"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="station_id"
+        android:id="@+id/station_id"
+        android:layout_below="@+id/station_name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="station_name_val"
+        android:id="@+id/station_name_val"
+        android:layout_marginLeft="27dp"
+        android:layout_marginStart="27dp"
+        android:layout_alignTop="@+id/station_name"
+        android:layout_toRightOf="@+id/station_name"
+        android:layout_toEndOf="@+id/station_name"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="station_id_val"
+        android:id="@+id/station_id_val"
+        android:layout_below="@+id/station_name_val"
+        android:layout_alignLeft="@+id/station_name_val"
+        android:layout_alignStart="@+id/station_name_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="tempature"
+        android:id="@+id/tempature"
+        android:layout_marginTop="27dp"
+        android:layout_below="@+id/station_id"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="temp_val"
+        android:id="@+id/temp_val"
+        android:layout_alignTop="@+id/tempature"
+        android:layout_alignLeft="@+id/station_id_val"
+        android:layout_alignStart="@+id/station_id_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="pressure"
+        android:id="@+id/pressure"
+        android:layout_below="@+id/tempature"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="pressure_val"
+        android:id="@+id/pressure_val"
+        android:layout_below="@+id/temp_val"
+        android:layout_alignLeft="@+id/temp_val"
+        android:layout_alignStart="@+id/temp_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="humidity"
+        android:id="@+id/humidity"
+        android:layout_below="@+id/pressure"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="humidity_val"
+        android:id="@+id/humidity_val"
+        android:layout_below="@+id/pressure_val"
+        android:layout_alignLeft="@+id/pressure_val"
+        android:layout_alignStart="@+id/pressure_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="wind_speed"
+        android:id="@+id/wind_speed"
+        android:layout_below="@+id/humidity"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="wind_speed_val"
+        android:id="@+id/wind_speed_val"
+        android:layout_alignTop="@+id/wind_speed"
+        android:layout_alignLeft="@+id/humidity_val"
+        android:layout_alignStart="@+id/humidity_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="wind_deg"
+        android:id="@+id/wind_deg"
+        android:layout_below="@+id/wind_speed"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="wind_deg_val"
+        android:id="@+id/wind_deg_val"
+        android:layout_alignTop="@+id/wind_deg"
+        android:layout_alignLeft="@+id/wind_speed_val"
+        android:layout_alignStart="@+id/wind_speed_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="wind_gust"
+        android:id="@+id/wind_gust"
+        android:layout_below="@+id/wind_deg"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="wind_gust_val"
+        android:id="@+id/wind_gust_val"
+        android:layout_below="@+id/wind_deg_val"
+        android:layout_alignLeft="@+id/wind_deg_val"
+        android:layout_alignStart="@+id/wind_deg_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="visibility"
+        android:id="@+id/visibility"
+        android:layout_below="@+id/wind_gust"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="24dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="visibility_val"
+        android:id="@+id/visibility_val"
+        android:layout_alignTop="@+id/visibility"
+        android:layout_alignLeft="@+id/wind_gust_val"
+        android:layout_alignStart="@+id/wind_gust_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="dewpoint"
+        android:id="@+id/dewpoint"
+        android:layout_below="@+id/visibility"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="dewpoint_val"
+        android:id="@+id/dewpoint_val"
+        android:layout_below="@+id/visibility_val"
+        android:layout_alignLeft="@+id/visibility_val"
+        android:layout_alignStart="@+id/visibility_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="humidex"
+        android:id="@+id/humidex"
+        android:layout_below="@+id/dewpoint"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="humidex_val"
+        android:id="@+id/humidex_val"
+        android:layout_below="@+id/dewpoint_val"
+        android:layout_alignLeft="@+id/dewpoint_val"
+        android:layout_alignStart="@+id/dewpoint_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="cloud_condition"
+        android:id="@+id/cloud_condition"
+        android:layout_below="@+id/humidex"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="19dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="cloud_cond_val"
+        android:id="@+id/cloud_cond_val"
+        android:layout_alignTop="@+id/cloud_condition"
+        android:layout_alignLeft="@+id/humidex_val"
+        android:layout_alignStart="@+id/humidex_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="rain_today"
+        android:id="@+id/rain_today"
+        android:layout_below="@+id/cloud_condition"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="rain_today_val"
+        android:id="@+id/rain_today_val"
+        android:layout_below="@+id/cloud_cond_val"
+        android:layout_alignLeft="@+id/cloud_cond_val"
+        android:layout_alignStart="@+id/cloud_cond_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="station_time"
+        android:id="@+id/station_time"
+        android:layout_below="@+id/station_id"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="station_time_val"
+        android:id="@+id/station_time_val"
+        android:layout_below="@+id/station_id_val"
+        android:layout_alignLeft="@+id/station_id_val"
+        android:layout_alignStart="@+id/station_id_val"/>
+
 </RelativeLayout>
