--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_current_weather.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_current_weather.xml
@@ -1,3 +1,11 @@
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
@@ -8,7 +16,6 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".CurrentWeatherActivity"
                 android:id="@+id/currentweatheract">
-
 
     <TextView
         android:layout_width="wrap_content"
@@ -508,3 +515,4 @@
         android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
+</ScrollView>
