added ui items for daily weather. added new date to java bean for daily weather. fixed issue with current weather.

--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/daily_weather_row_layout.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/daily_weather_row_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+    android:id="@+id/daily_row_layout">
 
     <!--private Double daily_night_temp;-->
 
@@ -126,4 +127,164 @@
         android:layout_below="@+id/daily_evening_val"
         android:layout_alignLeft="@+id/daily_evening_val"
         android:layout_alignStart="@+id/daily_evening_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_humidity"
+        android:id="@+id/daily_humidity"
+        android:layout_below="@+id/daily_night"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_humidity_val"
+        android:id="@+id/daily_humidity_val"
+        android:layout_below="@+id/daily_night_val"
+        android:layout_alignLeft="@+id/daily_night_val"
+        android:layout_alignStart="@+id/daily_night_val" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_cloud_pect"
+        android:id="@+id/daily_cloud_pect"
+        android:layout_below="@+id/daily_humidity"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_cloud_pect_val"
+        android:id="@+id/daily_cloud_pect_val"
+        android:layout_below="@+id/daily_humidity_val"
+        android:layout_alignLeft="@+id/daily_humidity_val"
+        android:layout_alignStart="@+id/daily_humidity_val" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_pressure"
+        android:id="@+id/daily_pressure"
+        android:layout_below="@+id/daily_cloud_pect"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_pressure_val"
+        android:id="@+id/daily_pressure_val"
+        android:layout_below="@+id/daily_cloud_pect_val"
+        android:layout_alignLeft="@+id/daily_cloud_pect_val"
+        android:layout_alignStart="@+id/daily_cloud_pect_val" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_rain"
+        android:id="@+id/daily_rain"
+        android:layout_below="@+id/daily_pressure"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_rain_val"
+        android:id="@+id/daily_rain_val"
+        android:layout_below="@+id/daily_pressure_val"
+        android:layout_alignLeft="@+id/daily_pressure_val"
+        android:layout_alignStart="@+id/daily_pressure_val" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_snow"
+        android:id="@+id/daily_snow"
+        android:layout_below="@+id/daily_rain"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_snow_val"
+        android:id="@+id/daily_snow_val"
+        android:layout_below="@+id/daily_rain_val"
+        android:layout_alignLeft="@+id/daily_rain_val"
+        android:layout_alignStart="@+id/daily_rain_val" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_wind_deg"
+        android:id="@+id/daily_wind_deg"
+        android:layout_below="@+id/daily_snow"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_wind_deg_val"
+        android:id="@+id/daily_wind_deg_val"
+        android:layout_alignTop="@+id/daily_wind_deg"
+        android:layout_alignLeft="@+id/daily_snow_val"
+        android:layout_alignStart="@+id/daily_snow_val" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_wind_speed"
+        android:id="@+id/daily_wind_speed"
+        android:layout_below="@+id/daily_wind_deg"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_wind_speed_val"
+        android:id="@+id/daily_wind_speed_val"
+        android:layout_below="@+id/daily_wind_deg_val"
+        android:layout_alignLeft="@+id/daily_wind_deg_val"
+        android:layout_alignStart="@+id/daily_wind_deg_val" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="weather_date"
+        android:id="@+id/weather_date"
+        android:layout_below="@+id/daily_wind_speed"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="weather_date_val"
+        android:id="@+id/weather_date_val"
+        android:layout_below="@+id/daily_wind_speed_val"
+        android:layout_alignLeft="@+id/daily_wind_speed_val"
+        android:layout_alignStart="@+id/daily_wind_speed_val" />
 </RelativeLayout>
