--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_hourly_weather.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_hourly_weather.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="jmtechsvcs.myweatherapp.activitypkg.DailyWeatherForecastActivity">
+    tools:context="jmtechsvcs.myweatherapp.activitypkg.HourlyWeatherActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -28,7 +27,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/daily_weather_id"/>
+            android:id="@+id/hourly_weather_id"/>
     </LinearLayout>
 
 </RelativeLayout>
